# bazel_ewdk_cc

./: .gitattributes  BUILD.bazel  BUILD.ewdk.toolchains.tpl  BUILD.no_ewdk  MODULE.bazel  README.md  WORKSPACE  arm_asm.bat.tpl  c_cpp_properties.tpl  cmd_helper.tpl  deps_scanner.bat.tpl  ewdk_cc_configure.bzl  ewdk_command.bzl  ewdk_extension.bzl  idl_toolchain.bzl  resource_toolchain.bzl  wpp_toolchain.bzl
