# SPDX-FileCopyrightText: Copyright (c) 2022 Ira Strawser
# SPDX-License-Identifier: MIT

module(
    name = "ewdk_cc",
    version = "1.0.12",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.11")

toolchains = use_extension("//:ewdk_extension.bzl", "toolchains")
use_repo(toolchains, name = "ewdk_cc")
register_toolchains("@ewdk_cc//:all")
